--- a/components/elements/Arrow/Arrow.module.css
+++ b/components/elements/Arrow/Arrow.module.css
@@ -4,11 +4,23 @@
 }
 
 .arrow {
-  border: solid var(--white);
+  border-color: currentcolor;
   border-width: 0 3px 3px 0;
+  border-style: solid;
   display: inline-block;
 }
 
+.caret {
+  border-color: currentcolor transparent;
+  border-style: solid;
+  border-width: 0.5rem 0.4rem 0;
+  content: '';
+  position: relative;
+  top: 4px;
+  transform: translateY(-50%);
+}
+
+/* Positions */
 .right {
   transform: rotate(-45deg);
 }
