--- a/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
+++ b/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
@@ -29,16 +29,8 @@
 .frFlag {
   background-image: url('../../../public/images/flags/fr.webp');
 }
-
-.dropDownCaret {
-  border-color: currentcolor transparent;
-  border-style: solid;
-  border-width: 0.5rem 0.5rem 0;
-  content: '';
-  margin-left: 0.3rem;
-  position: relative;
-  top: 4px;
-  transform: translateY(-50%);
+.plainCountryName {
+  margin-right: 0.3rem;
 }
 
 .langsList {
