remove loader in nav

--- a/styles/slider.css
+++ b/styles/slider.css
@@ -13,4 +13,6 @@
 .swiper-button-next,
 .swiper-button-prev {
   color: var(--white);
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 0.5rem;
 }
