--- a/components/elements/ActiveLink/ActiveLink.module.css
+++ b/components/elements/ActiveLink/ActiveLink.module.css
@@ -1,14 +1,27 @@
 .activeLink {
-  color: var(--primary);
-  font-weight: 700;
-  font-size: 1rem;
-  text-transform: uppercase;
+  padding: 4px 0;
+  display: inline-flex;
+  position: relative;
+  overflow: hidden;
+  font-weight: 400;
+  font-size: 1.25rem;
   transition: color 150ms ease-out;
 }
-.activeLink:hover {
-  color: var(--primary-hover);
+.activeLink::after {
+  content: '';
+  position: absolute;
+  left: 0px;
+  top: calc(100% - 2px);
+  transition: transform 300ms ease-out;
+  display: inline-block;
+  height: 2px;
+  width: 100%;
+  transform: translateX(-101%);
+  background: var(--primary) none repeat scroll 0% 0%;
 }
-.active {
-  color: var(--primary);
-  box-shadow: 0 2px 0 0px var(--secondary-hover);
+.activeLink:hover::after {
+  transform: translateX(0px);
+}
+.active.activeLink::after {
+  transform: translateX(0px);
 }
