--- a/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
+++ b/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
@@ -61,7 +61,6 @@
 .langButton {
   display: flex;
   align-items: center;
-  justify-content: center;
   transition: color 150ms ease-out, background-color 150ms ease-out;
   color: var(--primary);
   padding: 1rem;
@@ -85,9 +84,9 @@
     margin-top: 0;
   }
   .langsList {
-    top: 55px;
+    top: 35px;
     bottom: unset;
-    right: 18px;
+    right: 0;
   }
 
   .active {
