--- a/components/modules/SideNavigation/SideNavigation.module.css
+++ b/components/modules/SideNavigation/SideNavigation.module.css
@@ -5,7 +5,7 @@
   right: 0;
   height: 100vh;
   box-sizing: border-box;
-  padding-top: 70px;
+  padding-top: 60px;
 }
 .navOpened {
   transition: width 300ms ease-out;
@@ -19,7 +19,7 @@
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
     rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
   position: absolute;
-  top: 65px;
+  top: 55px;
   left: 0;
   height: 5px;
   width: 100%;
@@ -35,6 +35,8 @@
 }
 .item {
   margin-bottom: 2rem;
+  position: relative;
+  overflow: hidden;
 }
 .userPicture {
   border-radius: 50%;
