--- a/pages/restaurants/Restaurants.module.css
+++ b/pages/restaurants/Restaurants.module.css
@@ -1,8 +1,9 @@
 .mainTitle {
   color: var(--primary);
-  font-weight: 600;
+  font-weight: 800;
   font-size: 1.75rem;
   margin: 2rem 0 1rem 0;
+  text-transform: uppercase;
 }
 
 .restaurantsContent {
@@ -19,7 +20,7 @@
 }
 .restaurantsContent h2 {
   color: var(--black);
-  font-weight: 600;
+  font-weight: 700;
   font-size: 1.5rem;
   margin-bottom: 2rem;
 }
