--- a/pages/delivery/Delivery.module.css
+++ b/pages/delivery/Delivery.module.css
@@ -1,11 +1,11 @@
-.deliveryMainContent {
+.mainContent {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   margin-bottom: 1rem;
 }
-.deliveryMainContent div:first-child,
-.deliveryMainContent div:last-child {
+.mainContent div:first-child,
+.mainContent div:last-child {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,8 +14,8 @@
   text-align: center;
 }
 
-.deliveryMainContent h1,
-.deliveryMainContent h2 {
+.mainContent h1,
+.mainContent h2 {
   color: var(--primary);
   font-weight: 700;
   font-size: 1.75rem;
