--- a/components/elements/Headings/Headings.module.css
+++ b/components/elements/Headings/Headings.module.css
@@ -8,3 +8,12 @@
 .three {
   font-size: 1.25rem;
 }
+.four {
+  font-size: 1.25rem;
+}
+.five {
+  font-size: 1.25rem;
+}
+.six {
+  font-size: 1.25rem;
+}
