--- a/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
+++ b/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
@@ -1,6 +1,3 @@
-.languageSwitcherContainer {
-  margin-top: 1.5rem;
-}
 .languageSwitcherButton {
   display: flex;
   align-items: center;
@@ -8,6 +5,7 @@
   font-weight: 700;
   color: var(--primary);
   transition: color 150ms ease-out;
+  margin-top: 1.5rem;
 }
 .languageSwitcherButton:hover {
   color: var(--primary-hover);
@@ -36,13 +34,13 @@
 .langsList {
   display: block;
   background-color: var(--white);
-  border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
+  border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 0px 0.8rem;
   position: absolute;
   bottom: 55px;
   font-weight: 600;
   min-width: 110px;
-  overflow: hidden;
+  padding: 0.5rem;
 }
 
 .active {
@@ -63,9 +61,9 @@
   align-items: center;
   transition: color 150ms ease-out, background-color 150ms ease-out;
   color: var(--primary);
-  padding: 1rem;
   width: 100%;
-  overflow: hidden;
+  padding: 0.5rem;
+  line-height: 2rem;
 }
 .langButton:hover {
   color: var(--primary-hover);
@@ -80,7 +78,7 @@
 /****** MEDIA QUERIES *****/
 /**************************/
 @media screen and (min-width: 1024px) {
-  .languageSwitcherContainer {
+  .languageSwitcherButton {
     margin-top: 0;
   }
   .langsList {
