--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,6 +34,18 @@ a {
   color: inherit;
   text-decoration: none;
 }
+button:focus {
+  color: var(--primary-hover);
+  border: var(--primary);
+  box-sizing: border-box;
+}
+
+.container {
+  width: 100%;
+  max-width: 1280px;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 #app {
   width: 100%;
