--- a/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
+++ b/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
@@ -34,13 +34,13 @@
 .langsList {
   display: block;
   background-color: var(--white);
-  border-radius: 8px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 0px 0.8rem;
+  border-radius: 4px;
+  box-shadow: 0 2px 6px 2px rgba(60, 64, 67, 0.15);
   position: absolute;
-  bottom: 55px;
+  bottom: 50px;
   font-weight: 600;
   min-width: 110px;
-  padding: 0.5rem;
+  padding: 3px;
 }
 
 .active {
@@ -61,7 +61,7 @@
   align-items: center;
   transition: color 150ms ease-out, background-color 150ms ease-out;
   color: var(--primary);
-  padding: 0.5rem;
+  padding: 0.5rem 1rem;
   line-height: 2rem;
 }
 .langButton:hover {
@@ -81,7 +81,7 @@
     margin-top: 0;
   }
   .langsList {
-    top: 35px;
+    top: 30px;
     bottom: unset;
     right: 0;
   }
