--- a/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
+++ b/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
@@ -40,7 +40,7 @@
   bottom: 50px;
   font-weight: 600;
   min-width: 110px;
-  padding: 3px;
+  padding: 0.5rem;
 }
 
 .active {
@@ -52,10 +52,6 @@
   transform: scale(0);
 }
 
-.langItem:not(:last-child) {
-  box-sizing: border-box;
-  border-bottom: 1px solid var(--lightGray);
-}
 .langButton {
   display: flex;
   align-items: center;
