--- a/components/elements/buttons/BurgerMenuToggle/BurgerMenuToggle.module.css
+++ b/components/elements/buttons/BurgerMenuToggle/BurgerMenuToggle.module.css
@@ -1,12 +1,13 @@
 .button {
   display: flex;
-  border: none;
+  align-items: center;
   cursor: pointer;
   padding: 0;
+  border: none;
   background-color: transparent;
   z-index: 20;
   color: var(--primary);
-  font-size: 1.2rem;
+  font-size: 1.25rem;
 }
 
 .menuTitle {
