--- a/components/elements/ThemeSwitcher/ThemeSwitcher.module.css
+++ b/components/elements/ThemeSwitcher/ThemeSwitcher.module.css
@@ -3,23 +3,32 @@
   align-items: center;
   justify-content: center;
   flex-shrink: 0;
+  border-radius: 1.3rem;
+  border: 1px solid transparent;
+  transition: border-color 150ms ease-out;
+  padding-right: 0.5rem;
+}
+.switcherButton:hover {
+  border: 1px solid var(--lightGray);
+}
+.switcherButton:hover svg {
+  background-color: var(--lightGray);
 }
 
 .switcherButton svg {
   width: 100%;
   transition: stroke 150ms ease-out, fill 150ms ease-out,
-    background-color 150ms ease-out;
+    background-color 150ms ease-out, transform 300ms var(--transition);
   border-radius: 50%;
   padding: 0.4rem;
   max-width: 1.7rem;
   max-height: 1.7rem;
   flex-shrink: 0;
 }
-.switcherButton svg:hover {
-  background-color: var(--lightGray);
-}
+
 .light {
   fill: var(--white);
+  transform: rotate(360deg);
 }
 
 .dark {
