cart icon and page added

--- a/components/elements/ThemeSwitcher/ThemeSwitcher.module.css
+++ b/components/elements/ThemeSwitcher/ThemeSwitcher.module.css
@@ -7,6 +7,7 @@
   border: 1px solid transparent;
   transition: border-color 150ms ease-out;
   padding-right: 0.5rem;
+  margin-left: -0.5rem;
 }
 .switcherButton:hover {
   border: 1px solid var(--lightGray);
@@ -16,14 +17,8 @@
 }
 
 .switcherButton svg {
-  width: 100%;
-  transition: stroke 150ms ease-out, fill 150ms ease-out,
-    background-color 150ms ease-out, transform 300ms var(--transition);
-  border-radius: 50%;
   padding: 0.4rem;
-  max-width: 1.7rem;
-  max-height: 1.7rem;
-  flex-shrink: 0;
+  border-radius: 50%;
 }
 
 .light {
