--- a/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
+++ b/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
@@ -2,8 +2,6 @@
   display: flex;
   align-items: center;
   background: none;
-  font-weight: 700;
-  color: var(--primary);
   transition: color 150ms ease-out;
   margin-top: 1.5rem;
 }
@@ -28,7 +26,7 @@
   background-image: url('../../../public/images/flags/fr.webp');
 }
 .plainCountryName {
-  margin-right: 0.3rem;
+  margin: 0 0.3rem 0 0.1rem;
 }
 
 .langsList {
