--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,6 +53,13 @@ a {
   color: inherit;
   text-decoration: none;
 }
+svg {
+  transition: stroke 150ms ease-out, fill 150ms ease-out,
+    background-color 150ms ease-out, transform 300ms var(--transition);
+  max-width: 1.7rem;
+  max-height: 1.7rem;
+  flex-shrink: 0;
+}
 
 #app {
   width: 100%;
