--- a/components/modules/SideNavigation/SideNavigation.module.css
+++ b/components/modules/SideNavigation/SideNavigation.module.css
@@ -37,8 +37,8 @@
   margin-bottom: 1.5rem;
   position: relative;
 }
-.userPicture {
-  border-radius: 50%;
+.userIcon {
+  display: flex;
 }
 
 /**************************/
