--- a/components/elements/buttons/Button/Button.module.css
+++ b/components/elements/buttons/Button/Button.module.css
@@ -1,18 +1,29 @@
 .button {
   display: inline-flex;
   align-items: center;
-  padding: 1rem;
-  background-color: var(--primary);
+  padding: 0.8rem 1rem;
   border-radius: 0.5rem;
-  color: var(--white);
-  font-weight: 700;
+  font-weight: 600;
   font-size: 1rem;
   text-transform: uppercase;
   transition: background-color 150ms ease-out;
   position: relative;
 }
-.button:hover {
+
+.filled {
+  background-color: var(--primary);
+  color: var(--white);
+}
+.filled:hover {
   background-color: var(--primary-hover);
+}
+.border {
+  border: 2px solid var(--primary);
+  color: var(--primary);
+}
+.border:hover {
+  background-color: var(--primary);
+  color: var(--white);
 }
 
 .disable {
