--- a/components/elements/ActiveLink/ActiveLink.module.css
+++ b/components/elements/ActiveLink/ActiveLink.module.css
@@ -11,10 +11,10 @@
   content: '';
   position: absolute;
   left: 0;
-  top: calc(100% - 2px);
+  top: calc(100% - 0.15rem);
   transition: transform 200ms ease-out;
   display: inline-block;
-  height: 2px;
+  height: 0.15rem;
   width: 100%;
   transform: translateX(-101%);
   background: var(--primary) none repeat scroll 0% 0%;
