--- a/components/elements/CartCount/CartCount.module.css
+++ b/components/elements/CartCount/CartCount.module.css
@@ -17,9 +17,9 @@
   align-items: center;
   justify-content: center;
   position: absolute;
-  top: -10px;
+  top: -0.7rem;
   right: 0;
-  width: 20px;
+  width: 1.4rem;
   font-size: 0.938rem;
   color: var(--white);
   background-color: var(--primary);
