--- a/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
+++ b/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
@@ -10,14 +10,14 @@
 }
 
 .flag {
-  height: 20px;
-  width: 20px;
+  height: 1.3rem;
+  width: 1.3rem;
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
   display: inline-block;
   pointer-events: none;
-  margin-right: 0.3rem;
+  margin-right: 0.6rem;
 }
 .enFlag {
   background-image: url('../../../public/images/flags/us.webp');
@@ -35,7 +35,7 @@
   border-radius: 4px;
   box-shadow: 0 2px 6px 2px rgba(60, 64, 67, 0.15);
   position: absolute;
-  bottom: 50px;
+  bottom: 3rem;
   font-weight: 600;
   min-width: 110px;
   padding: 0.5rem;
@@ -75,7 +75,7 @@
     margin-top: 0;
   }
   .langsList {
-    top: 30px;
+    top: 2rem;
     bottom: unset;
     right: 0;
   }
