--- a/components/elements/buttons/BurgerMenuToggle/BurgerMenuToggle.module.css
+++ b/components/elements/buttons/BurgerMenuToggle/BurgerMenuToggle.module.css
@@ -16,16 +16,16 @@
 }
 
 .barsContainer {
-  width: 25px;
-  height: 20px;
+  width: 1.8rem;
+  height: 1.4rem;
   position: relative;
 }
 .bar {
   width: 100%;
-  height: 2px;
+  height: 0.15rem;
   background-color: var(--primary);
   display: block;
-  border-radius: 4px;
+  border-radius: 6px;
   position: absolute;
   will-change: transform;
   transition: transform 300ms var(--transition),
@@ -43,7 +43,7 @@
   top: 0;
 }
 .bar2 {
-  top: 9px;
+  top: 0.6rem;
 }
 .bar3 {
   bottom: 0;
@@ -55,7 +55,7 @@
   transform-origin: 5%;
 }
 .bar2Active {
-  transform: scale(0, 0) translateX(-5px);
+  transform: scale(0, 0) translateX(-0.5rem);
   background-color: transparent;
 }
 .bar3Active {
