--- a/components/modules/OpenLayersMap/OpenLayersMap.module.css
+++ b/components/modules/OpenLayersMap/OpenLayersMap.module.css
@@ -7,10 +7,10 @@
 .popup {
   display: flex;
   position: absolute;
-  top: -150px;
-  left: -93px;
-  width: 150px;
-  height: 90px;
+  top: -10.7rem;
+  left: -6.65rem;
+  width: 11rem;
+  height: 6.5rem;
   padding: 1rem;
   border-radius: 0.5rem;
   border: 2px solid var(--primary);
@@ -44,18 +44,16 @@
 }
 .itineraryIcon {
   stroke: currentColor;
-  width: 12px;
-  margin-right: 0.25rem;
+  width: 0.8rem;
+  margin-right: 0.3rem;
 }
 .arrow {
   transform: rotate(45deg);
   position: absolute;
-  bottom: -11px;
-  left: 81px;
-  width: 18px;
-  max-width: 18px;
-  height: 18px;
-  max-height: 18px;
+  bottom: -0.8rem;
+  left: 5.8rem;
+  width: 1.35rem;
+  height: 1.35rem;
   background-color: var(--white);
   border-right: 2px solid var(--primary);
   border-bottom: 2px solid var(--primary);
