--- a/components/modules/Header/Header.module.css
+++ b/components/modules/Header/Header.module.css
@@ -1,10 +1,14 @@
 .header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: var(--white);
   align-items: center;
   display: flex;
   width: 100%;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
     rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
-  min-height: 60px;
+  min-height: 4rem;
   padding: 0 1.5rem;
   box-sizing: border-box;
   z-index: 10;
@@ -18,10 +22,11 @@
 
 .mainLogo {
   font-family: 'Baloo Paaji 2', cursive;
-  cursor: pointer;
-  user-select: none;
   font-size: 1.75rem;
   color: var(--primary);
+  cursor: pointer;
+  user-select: none;
+  margin-right: 1rem;
   z-index: 20;
 }
 
@@ -30,6 +35,7 @@
 /**************************/
 @media screen and (min-width: 1024px) {
   .header {
-    min-height: 90px;
+    position: unset;
+    min-height: 6rem;
   }
 }
