--- a/components/modules/SideNavigation/SideNavigation.module.css
+++ b/components/modules/SideNavigation/SideNavigation.module.css
@@ -1,6 +1,6 @@
 .blackFilter {
-  position: absolute;
-  left: 0;
+  position: fixed;
+  inset: 0;
   width: 100%;
   min-height: 100vh;
   z-index: 100;
@@ -34,7 +34,7 @@
 }
 
 .sideNavigation {
-  min-width: 250px;
+  min-width: 18rem;
   padding: 1.5rem;
   box-sizing: border-box;
   display: flex;
