--- a/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
+++ b/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
@@ -42,8 +42,8 @@
 }
 
 .active {
-  animation: scale-up-right-mobile 150ms cubic-bezier(0.39, 0.575, 0.565, 1)
-    both;
+  animation: scale-up-bottom-left-mobile 150ms
+    cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
 .close {
@@ -81,26 +81,26 @@
   }
 
   .active {
-    animation: scale-up-tr-desktop 150ms cubic-bezier(0.39, 0.575, 0.565, 1)
-      both;
+    animation: scale-up-top-right-desktop 150ms
+      cubic-bezier(0.39, 0.575, 0.565, 1) both;
   }
 }
 
 /**************************/
 /******* KEYFRAMES ********/
 /**************************/
-@keyframes scale-up-right-mobile {
+@keyframes scale-up-bottom-left-mobile {
   0% {
     transform: scale(0.5);
-    transform-origin: 100% 50%;
+    transform-origin: 0% 100%;
   }
   100% {
     transform: scale(1);
-    transform-origin: 100% 50%;
+    transform-origin: 0% 100%;
   }
 }
 
-@keyframes scale-up-tr-desktop {
+@keyframes scale-up-top-right-desktop {
   0% {
     transform: scale(0.5);
     transform-origin: 100% 0%;
