--- a/styles/globals.css
+++ b/styles/globals.css
@@ -85,6 +85,8 @@ svg {
   text-align: center;
 }
 main {
+  display: flex;
+  flex-direction: column;
   flex: 1;
   width: 100%;
   max-width: 1280px;
