--- a/components/modules/OpenLayersMap/OpenLayersMap.module.css
+++ b/components/modules/OpenLayersMap/OpenLayersMap.module.css
@@ -59,3 +59,12 @@
   border-bottom: 2px solid var(--primary);
   border-radius: 0 1px 0 1px;
 }
+
+/**************************/
+/****** MEDIA QUERIES *****/
+/**************************/
+@media screen and (min-width: 1024px) {
+  .mapContainer {
+    height: 36rem;
+  }
+}
