--- a/pages/profile/Profile.module.css
+++ b/pages/profile/Profile.module.css
@@ -3,3 +3,10 @@
   font-weight: 800;
   margin: 1rem 0;
 }
+
+.profilePicture {
+  width: 6rem;
+  height: 6rem;
+  border-radius: 50%;
+  margin-bottom: 2rem;
+}
