--- a/components/elements/ScrollToTopButton/ScrollToTopButton.module.css
+++ b/components/elements/ScrollToTopButton/ScrollToTopButton.module.css
@@ -1,33 +1,22 @@
 .button {
   position: fixed;
-  bottom: 8px;
-  right: 8px;
+  bottom: 1rem;
+  right: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 2px solid var(--gray);
-  border-radius: 0.5rem;
+  border-radius: 50%;
   padding: 0.5rem;
-  background-color: var(--gray);
+  background-color: var(--primary);
   transform: scale(0);
   will-change: transform;
   transition: transform 150ms ease-out, background-color 150ms ease-out;
-  width: 20px;
-  height: 20px;
-}
-.button:hover {
-  background-color: var(--white);
+  width: 3rem;
+  height: 3rem;
 }
 .active {
   transform: scale(1);
 }
-.span {
-  display: inline-block;
-  width: 1rem;
-  height: 1rem;
-  border-top-width: 0;
-  border-right-width: 0;
-  border-bottom-width: 2px;
-  border-left-width: 2px;
-  border-color: var(--white);
+.svgContainer {
+  transform: translateY(0.1rem);
 }
