--- a/components/modules/Navigation/Navigation.module.css
+++ b/components/modules/Navigation/Navigation.module.css
@@ -22,6 +22,7 @@
     display: flex;
     gap: 1rem;
     align-items: center;
+    color: var(--neutral-900);
   }
   .navList li {
     position: relative;
