--- a/pages/delivery/Delivery.module.css
+++ b/pages/delivery/Delivery.module.css
@@ -41,7 +41,7 @@
 .separation span:first-child,
 .separation span:last-child {
   display: inline-block;
-  background-color: var(--primary-hover);
+  background-color: var(--primary);
   width: 3rem;
   height: 0.1rem;
 }
