--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,31 +4,62 @@
 @import url('./slider.css');
 
 :root {
-  --black: #333;
-  --gray: #595959;
-  --lightGray: #d3d3d3;
-  --white: #fff;
+  --primary: var(--orange-900);
+  --primary-hover: var(--orange-800);
 
-  --primary: #72391d;
-  --primary-hover: #b85c2e;
-  --primary-bg: #72391d21;
+  --neutral-50: #fafafa;
+  --neutral-100: #f5f5f5;
+  --neutral-200: #e5e5e5;
+  --neutral-300: #d4d4d4;
+  --neutral-400: #a3a3a3;
+  --neutral-500: #737373;
+  --neutral-600: #404040;
+  --neutral-700: #262626;
+  --neutral-800: #171717;
+  --neutral-900: #121212;
 
-  --secondary: #872121;
-  --secondary-hover: #d14242;
-  --secondary-bg: #8721211c;
+  --orange-50: #fff7ed;
+  --orange-100: #ffedd5;
+  --orange-200: #fed7aa;
+  --orange-300: #fdba74;
+  --orange-400: #fb923c;
+  --orange-500: #f97316;
+  --orange-600: #ea580c;
+  --orange-700: #c2410c;
+  --orange-800: #9a3412;
+  --orange-900: #7c2d12;
 
   --error: #ad2216;
+  --rating: #ffaa00;
 
   --transition: cubic-bezier(0.55, 0.06, 0.68, 0.19);
 }
 
 html[data-theme='dark'] {
-  --black: #ffffff;
-  --gray: #cecece;
-  --lightGray: #3d3d3d;
-  --white: #171717;
+  --primary: var(--orange-400);
+  --primary-hover: var(--orange-200);
 
-  --primary: #da6d36;
+  --neutral-900: #fafafa;
+  --neutral-800: #f5f5f5;
+  --neutral-700: #e5e5e5;
+  --neutral-600: #d4d4d4;
+  --neutral-500: #a3a3a3;
+  --neutral-400: #737373;
+  --neutral-300: #404040;
+  --neutral-200: #262626;
+  --neutral-100: #171717;
+  --neutral-50: #121212;
+
+  --orange-900: #fff7ed;
+  --orange-800: #ffedd5;
+  --orange-700: #fed7aa;
+  --orange-600: #fdba74;
+  --orange-500: #fb923c;
+  --orange-400: #f97316;
+  --orange-300: #ea580c;
+  --orange-200: #c2410c;
+  --orange-100: #9a3412;
+  --orange-50: #7c2d12;
 }
 
 *:focus-visible {
@@ -61,23 +92,22 @@ svg {
   flex-shrink: 0;
 }
 
-#app {
+.app {
   width: 100%;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: var(--white);
-  color: var(--black);
+  background-color: var(--neutral-100);
   position: relative;
 }
-#not-found {
+.notFound {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-#not-found h1 {
+.notFound h1 {
   transform: translateY(-100%);
   font-weight: 700;
   font-size: 1.5rem;
@@ -94,7 +124,13 @@ main {
   margin-right: auto;
   box-sizing: border-box;
 }
-#app > main {
+h2 {
+  color: var(--neutral-900);
+}
+p {
+  color: var(--neutral-600);
+}
+.app > main {
   padding-top: 4rem;
 }
 .container {
@@ -113,7 +149,8 @@ main {
 
 /* Controle buttons in Openlayers */
 .ol-control button {
-  background-color: rgba(0, 59, 136, 0.7) !important;
+  background-color: var(--primary) !important;
+  color: var(--neutral-50) !important;
 }
 .ol-control button:hover {
   cursor: pointer;
@@ -123,7 +160,7 @@ main {
 /****** MEDIA QUERIES *****/
 /**************************/
 @media screen and (min-width: 1024px) {
-  #app > main {
+  .app > main {
     padding-top: unset;
   }
 }
