--- a/styles/slider.css
+++ b/styles/slider.css
@@ -3,7 +3,7 @@
 @import 'swiper/css/pagination';
 
 .swiper-pagination-bullet {
-  background-color: var(--white);
+  background-color: #fff;
   opacity: 1;
 }
 .swiper-pagination-bullet-active {
@@ -12,7 +12,7 @@
 
 .swiper-button-next,
 .swiper-button-prev {
-  color: var(--white);
+  color: #fff;
   background-color: rgba(0, 0, 0, 0.5);
   padding: 0.5rem;
 }
