--- a/components/modules/SideNavigation/SideNavigation.module.css
+++ b/components/modules/SideNavigation/SideNavigation.module.css
@@ -45,6 +45,11 @@
   height: 100%;
   overflow-y: auto;
 }
+.sideNavigation li {
+  margin-bottom: 1rem;
+  position: relative;
+  text-transform: uppercase;
+}
 .topRightCloseButton {
   position: absolute;
   align-self: end;
@@ -54,12 +59,8 @@
   margin-top: 2.5rem;
   padding-top: 0.5rem;
 }
-.secondNavigation .item {
+.secondNavigation li {
   padding: 0.3rem 0;
-}
-.item {
-  margin-bottom: 1rem;
-  position: relative;
 }
 
 /**************************/
