--- a/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
+++ b/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
@@ -59,7 +59,7 @@
   display: flex;
   align-items: center;
   transition: color 150ms ease-out, background-color 150ms ease-out;
-  padding: 0.5rem 1rem;
+  padding: 1rem;
 }
 .langButton:hover {
   color: var(--primary);
