bug langsList fixed

--- a/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
+++ b/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
@@ -41,7 +41,10 @@
   min-width: 6rem;
   padding: 0.5rem;
 }
-
+.langsList li {
+  margin: 0;
+  padding: 0;
+}
 .langsList li:not(:last-child) {
   border-bottom: 1px solid var(--neutral-300);
 }
