--- a/styles/globals.css
+++ b/styles/globals.css
@@ -63,7 +63,7 @@ html[data-theme='dark'] {
 }
 
 *:focus-visible {
-  outline: solid blue 2px;
+  outline: solid #48cfe7 3px;
 }
 
 *:focus:not(:focus-visible) {
@@ -75,7 +75,10 @@ html {
 
 body,
 select {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Baloo 2', cursive, ui-sans-serif, system-ui, -apple-system,
+    BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans,
+    sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol,
+    Noto Color Emoji;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5rem;
