--- a/components/elements/ScrollToTopButton/ScrollToTopButton.module.css
+++ b/components/elements/ScrollToTopButton/ScrollToTopButton.module.css
@@ -1,4 +1,6 @@
 .button {
+  width: 3rem;
+  height: 3rem;
   position: fixed;
   bottom: 1rem;
   right: 1rem;
@@ -11,8 +13,7 @@
   transform: scale(0);
   will-change: transform;
   transition: transform 150ms ease-out, background-color 150ms ease-out;
-  width: 3rem;
-  height: 3rem;
+  z-index: 10;
 }
 .active {
   transform: scale(1);
