--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,93 +1,35 @@
 @font-face {
-  font-family: 'Source Sans Pro';
-  src: url('/fonts/Source_Sans_Pro/SourceSansPro-Black.ttf');
+  font-family: 'Baloo 2';
+  src: url('/fonts/Baloo_2/Baloo2-ExtraBold.ttf');
   font-style: normal;
-  font-weight: 900;
+  font-weight: 800;
   font-display: swap;
 }
 @font-face {
-  font-family: 'Source Sans Pro';
-  src: url('/fonts/Source_Sans_Pro/SourceSansPro-BlackItalic.ttf');
-  font-style: italic;
-  font-weight: 900;
-  font-display: swap;
-}
-@font-face {
-  font-family: 'Source Sans Pro';
-  src: url('/fonts/Source_Sans_Pro/SourceSansPro-Bold.ttf');
+  font-family: 'Baloo 2';
+  src: url('/fonts/Baloo_2/Baloo2-Bold.ttf');
   font-style: normal;
   font-weight: 700;
   font-display: swap;
 }
 @font-face {
-  font-family: 'Source Sans Pro';
-  src: url('/fonts/Source_Sans_Pro/SourceSansPro-BoldItalic.ttf');
-  font-style: italic;
-  font-weight: 700;
-  font-display: swap;
-}
-@font-face {
-  font-family: 'Source Sans Pro';
-  src: url('/fonts/Source_Sans_Pro/SourceSansPro-SemiBold.ttf');
+  font-family: 'Baloo 2';
+  src: url('/fonts/Baloo_2/Baloo2-SemiBold.ttf');
   font-style: normal;
   font-weight: 600;
   font-display: swap;
 }
 @font-face {
-  font-family: 'Source Sans Pro';
-  src: url('/fonts/Source_Sans_Pro/SourceSansPro-SemiBoldItalic.ttf');
-  font-style: italic;
-  font-weight: 600;
+  font-family: 'Baloo 2';
+  src: url('/fonts/Baloo_2/Baloo2-Medium.ttf');
+  font-style: normal;
+  font-weight: 500;
   font-display: swap;
 }
 @font-face {
-  font-family: 'Source Sans Pro';
-  src: url('/fonts/Source_Sans_Pro/SourceSansPro-Regular.ttf');
+  font-family: 'Baloo 2';
+  src: url('/fonts/Baloo_2/Baloo2-Regular.ttf');
   font-style: normal;
   font-weight: 400;
-  font-display: swap;
-}
-@font-face {
-  font-family: 'Source Sans Pro';
-  src: url('/fonts/Source_Sans_Pro/SourceSansPro-Italic.ttf');
-  font-style: italic;
-  font-weight: 400;
-  font-display: swap;
-}
-@font-face {
-  font-family: 'Source Sans Pro';
-  src: url('/fonts/Source_Sans_Pro/SourceSansPro-Light.ttf');
-  font-style: normal;
-  font-weight: 300;
-  font-display: swap;
-}
-@font-face {
-  font-family: 'Source Sans Pro';
-  src: url('/fonts/Source_Sans_Pro/SourceSansPro-LightItalic.ttf');
-  font-style: italic;
-  font-weight: 300;
-  font-display: swap;
-}
-@font-face {
-  font-family: 'Source Sans Pro';
-  src: url('/fonts/Source_Sans_Pro/SourceSansPro-ExtraLight.ttf');
-  font-style: normal;
-  font-weight: 200;
-  font-display: swap;
-}
-@font-face {
-  font-family: 'Source Sans Pro';
-  src: url('/fonts/Source_Sans_Pro/SourceSansPro-ExtraLightItalic.ttf');
-  font-style: italic;
-  font-weight: 200;
-  font-display: swap;
-}
-
-/* Baloo Paaji */
-@font-face {
-  font-family: 'Baloo Paaji 2';
-  src: url('/fonts/Baloo_Paaji_2/BalooPaaji2-Bold.ttf');
-  font-style: normal;
-  font-weight: 700;
   font-display: swap;
 }
