--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,8 +4,8 @@
 @import url('./slider.css');
 
 :root {
-  --primary: var(--orange-900);
-  --primary-hover: var(--orange-800);
+  --primary: #6e4a2c;
+  --primary-hover: #422c1a;
 
   --neutral-50: #fafafa;
   --neutral-100: #f5f5f5;
@@ -18,17 +18,6 @@
   --neutral-800: #171717;
   --neutral-900: #121212;
 
-  --orange-50: #fff7ed;
-  --orange-100: #ffedd5;
-  --orange-200: #fed7aa;
-  --orange-300: #fdba74;
-  --orange-400: #fb923c;
-  --orange-500: #f97316;
-  --orange-600: #ea580c;
-  --orange-700: #c2410c;
-  --orange-800: #9a3412;
-  --orange-900: #7c2d12;
-
   --error: #ad2216;
   --rating: #ffaa00;
 
@@ -37,7 +26,7 @@
 
 html[data-theme='dark'] {
   --primary: #dc9458;
-  --primary-hover: var(--orange-200);
+  --primary-hover: #e3a979;
 
   --neutral-900: #fafafa;
   --neutral-800: #f5f5f5;
@@ -49,17 +38,6 @@ html[data-theme='dark'] {
   --neutral-200: #262626;
   --neutral-100: #171717;
   --neutral-50: #121212;
-
-  --orange-900: #fff7ed;
-  --orange-800: #ffedd5;
-  --orange-700: #fed7aa;
-  --orange-600: #fdba74;
-  --orange-500: #fb923c;
-  --orange-400: #f97316;
-  --orange-300: #ea580c;
-  --orange-200: #c2410c;
-  --orange-100: #9a3412;
-  --orange-50: #7c2d12;
 }
 
 *:focus-visible {
