Lists product added

--- a/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
+++ b/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
@@ -1,5 +1,5 @@
 .languageSwitcherButton {
-  display: flex;
+  display: inline-flex;
   align-items: center;
   transition: border 150ms ease-out;
   border: 1px solid transparent;
