--- a/components/elements/ProductCard/ProductCard.module.css
+++ b/components/elements/ProductCard/ProductCard.module.css
@@ -2,7 +2,7 @@
   border: 1px solid var(--neutral-200);
   position: relative;
   width: 100%;
-  height: 25rem;
+  min-height: 25rem;
   background: var(--neutral-200);
   border-radius: 1.4rem;
   overflow: hidden;
