--- a/components/modules/Header/Header.module.css
+++ b/components/modules/Header/Header.module.css
@@ -6,13 +6,13 @@
   align-items: center;
   display: flex;
   width: 100%;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
-    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
-  min-height: 4rem;
+  height: 4.5rem;
   padding: 0 1.5rem;
   box-sizing: border-box;
-  z-index: 40;
   border-bottom: 1px solid var(--neutral-300);
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
+    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+  z-index: 80;
 }
 
 .headerContent {
