--- a/components/modules/ProductsList/ProductsList.module.css
+++ b/components/modules/ProductsList/ProductsList.module.css
@@ -5,11 +5,33 @@
   padding: 1rem;
 }
 
+.headingContainer {
+  position: relative;
+  width: max-content;
+}
+
+.headingContainer h2 {
+  position: relative;
+  z-index: 60;
+  margin-left: 1rem;
+}
+.stroke {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: rotate(-5deg) translate(0.2rem, 0.6rem);
+  background-color: #dc9458;
+  opacity: 0.5;
+  width: calc(100% + 1rem);
+  height: calc(100% - 1rem);
+}
+
 .categoryList {
   display: grid;
   grid-template-columns: repeat(1, minmax(0, 1fr));
   align-items: flex-start;
   gap: 2rem;
+  padding-bottom: 2rem;
 }
 
 /**************************/
