--- a/styles/globals.css
+++ b/styles/globals.css
@@ -106,13 +106,12 @@ main {
   margin-right: auto;
   box-sizing: border-box;
 }
-h2 {
-  color: var(--neutral-900);
-  font-weight: 600;
-  margin-bottom: 2rem;
-}
+
 p {
   color: var(--neutral-600);
+}
+.app > main {
+  padding-top: 4rem;
 }
 
 .container {
@@ -127,4 +126,13 @@ p {
 }
 .capitalize::first-letter {
   text-transform: capitalize;
+}
+
+/**************************/
+/****** MEDIA QUERIES *****/
+/**************************/
+@media screen and (min-width: 1024px) {
+  .app > main {
+    padding-top: unset;
+  }
 }
