--- a/components/modules/ProductsList/ProductsList.module.css
+++ b/components/modules/ProductsList/ProductsList.module.css
@@ -1,6 +1,8 @@
 .productsList {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   gap: 2rem;
   padding: 1rem;
 }
