--- a/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
+++ b/components/elements/LanguageSwitcher/LanguageSwitcher.module.css
@@ -4,7 +4,7 @@
   transition: border 150ms ease-out;
   border: 1px solid transparent;
   padding: 0.25rem;
-  margin-left: -0.25rem;
+  transform: translateX(-0.3rem);
 }
 .languageSwitcherButton:hover {
   border: 1px solid var(--neutral-300);
@@ -40,10 +40,8 @@
   min-width: 6rem;
   padding: 0.5rem;
 }
-.langsList li {
-  text-transform: capitalize;
-}
-.langsList li:not(:last-child) {
+
+.langsList > li:not(:last-child) {
   border-bottom: 1px solid var(--neutral-300);
 }
 
@@ -77,8 +75,7 @@
 /**************************/
 @media screen and (min-width: 1024px) {
   .languageSwitcherButton {
-    margin-top: 0;
-    margin-left: -0.25rem;
+    transform: translateX(0);
   }
   .langsList {
     top: 3rem;
