--- a/components/modules/Slider/Slider.module.css
+++ b/components/modules/Slider/Slider.module.css
@@ -1,7 +1,10 @@
 .swiperContainer {
   width: 100%;
   height: 100%;
-  max-height: 50rem;
+  max-height: 40rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .swiperLoading {
