--- a/styles/globals.css
+++ b/styles/globals.css
@@ -91,8 +91,7 @@ svg {
 }
 .notFound h1 {
   transform: translateY(-100%);
-  font-weight: 700;
-  font-size: 1.5rem;
+  font-weight: 600;
   color: var(--error);
   text-align: center;
 }
@@ -111,7 +110,7 @@ p {
   color: var(--neutral-600);
 }
 .app > main {
-  padding-top: 4rem;
+  padding-top: 4.5rem;
 }
 
 .container {
@@ -126,6 +125,10 @@ p {
 }
 .capitalize::first-letter {
   text-transform: capitalize;
+}
+
+.disable-scroll {
+  overflow-y: hidden;
 }
 
 /**************************/
