--- a/components/elements/ProductCard/ProductCard.module.css
+++ b/components/elements/ProductCard/ProductCard.module.css
@@ -1,11 +1,16 @@
 .card {
-  border: 1px solid var(--neutral-200);
+  display: flex;
+  flex-direction: column;
   position: relative;
   width: 100%;
-  min-height: 25rem;
-  background: var(--neutral-200);
-  border-radius: 1.4rem;
+  min-height: 20rem;
   overflow: hidden;
+  border: 2px solid var(--neutral-200);
+  border-radius: 1rem;
+  transition: border 150ms ease-out;
+}
+.card:hover {
+  cursor: pointer;
 }
 
 .cardImage {
@@ -14,6 +19,22 @@
   height: 12rem;
 }
 
-.cardDescription {
-  color: var(--neutral-600);
+.cardContent {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  padding: 1rem;
+}
+.cardTitle {
+  flex-grow: 1;
+  text-align: center;
+}
+
+/**************************/
+/****** MEDIA QUERIES *****/
+/**************************/
+@media screen and (min-width: 1024px) {
+  .card:hover {
+    border: 2px solid var(--primary);
+  }
 }
