--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,7 +53,8 @@ html {
 }
 
 body,
-select {
+select,
+input {
   font-family: 'Baloo 2', cursive, ui-sans-serif, system-ui, -apple-system,
     BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans,
     sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol,
@@ -109,9 +110,6 @@ main {
 p {
   color: var(--neutral-600);
 }
-.app > main {
-  padding-top: 4.5rem;
-}
 
 .container {
   width: 100%;
@@ -129,13 +127,4 @@ p {
 
 .disable-scroll {
   overflow-y: hidden;
-}
-
-/**************************/
-/****** MEDIA QUERIES *****/
-/**************************/
-@media screen and (min-width: 1024px) {
-  .app > main {
-    padding-top: unset;
-  }
 }
