--- a/components/elements/buttons/QuantityButton/QuantityButton.module.css
+++ b/components/elements/buttons/QuantityButton/QuantityButton.module.css
@@ -4,13 +4,13 @@
   justify-content: center;
   max-height: 2rem;
 }
+.inputContainer {
+  margin: 0 0.5rem;
+}
 .input {
   height: 100%;
   width: 100%;
   max-width: 8rem;
-  margin: 0 1rem;
-  border: 1px solid var(--neutral-200);
-  border-radius: 0.2rem;
   text-align: center;
 }
 .minus,
