--- a/components/fields/inputs/Inputs.module.css
+++ b/components/fields/inputs/Inputs.module.css
@@ -7,7 +7,6 @@
     Generic Labels
 **************/
 .label {
-  font-size: 0.875rem;
   font-weight: 600;
   color: var(--neutral-900);
 }
@@ -22,15 +21,13 @@
     Generic Inputs
 **************/
 .input {
-  font-size: 0.875rem;
   font-weight: 600;
   padding: 0.25rem 0.5rem;
   box-sizing: border-box;
-  border-radius: 9999px;
   border: 1px solid var(--neutral-200);
 }
 .errorInput {
-  border-color: var(--error);
+  border: 1px solid var(--error);
 }
 
 .errorMessage {
