--- a/components/elements/ProductCard/ProductCard.module.css
+++ b/components/elements/ProductCard/ProductCard.module.css
@@ -6,7 +6,8 @@
   height: 20rem;
   overflow: hidden;
   color: var(--neutral-900);
-  border: 2px solid var(--neutral-200);
+  border: 1px solid var(--neutral-300);
+  background-color: var(--neutral-100);
   border-radius: 1rem;
   transition: border 150ms ease-out;
 }
@@ -36,6 +37,6 @@
 /**************************/
 @media screen and (min-width: 1024px) {
   .card:hover {
-    border: 2px solid var(--primary);
+    border: 1px solid var(--primary);
   }
 }
